2014-06-06
 * I command (take image, leave shutter as it is)

2014-04-27
 * -s option for rts2-json, rts2-bb-json script

2014-04-24
 * Added support for binning (tested on iXon 1K x 1K emccd) - Shashikiran Ganesh <shashi@prl.res.in>

2014-04-16
 * rep_n and rep_separation are saved to the database

2014-04-15
 * addParkPosOption, createParkPos Telescope class methods

2014-04-10
 * rep_n and rep_separation queue entries parameters

2014-03-12
 * added skip command

2014-03-06
 * flat_beginning, flat_ending and friends
 * set deamon values from command line

2014-01-02
 * MI Filter wheel driver

2013-12-28
 * queue's check target length field

0.9.5
=====

2013-12-1
 * Added SI3097 support

2013-07-26
 * Added normalizeRaDec function to utilsfunc - normalizing RaDec with |dec| > 90

2013-07-13
 * Added support for Automated Weather Station by mlab

2013-06-18
 * Added support for Planewave Instruments' Hedrick Focuser

2013-06-06
 * fixed nstep focuser

2013-05-28
 * Java JSON bindings (in java directory)

2013-05-04
 * PROTO_STATUS_PROGRESS message (transmits both state change and expected duration)

2013-04-29
 * user variable permissions

2013-04-24
 * user permissions

2013-03-29
 * moved XMLRPC++ headers to include directory

2013-03-26
 * moved target and observation request to JSON library

2013-03-21
 * migrated JSON DB API to jsondb

2013-03-04
 * rts2_status_t for device status

2013-02-28
 * initDB with connection name parameter, allowning multiple connection for multi-thread applications

2013-02-26
 * added bb_observatory_id to plan table

2013-02-25
 * introduced messages types - currently only for observation slew/start/end/interruptions

2013-02-23
 * HARD_OFF/SOFT_OFF states becomes part of ONOFF_MASK, not direct status

2013-02-14
 * added support for GCUSB-nStep focuser

2013-01-13
 * fixed various bugs in simulator

2013-01-20
 * test_restart command for XMLRPCd
 * queues_targets table

2013-01-17